# fishhook-rs

./: .gitignore  Cargo.toml  README.md
examples/memhook/: Cargo.toml
examples/memhook/src/: backtrace.rs  collector.rs  lib.rs  tree.rs
examples/simple/: Cargo.toml  run.sh
examples/simple/src/: main.rs
original/: fishhook.c
src/: lib.rs
src/arch/: darwin.rs  linux.rs  mod.rs
