[package]
name = "fishhook"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/blkmlk/fishhook-rs"
license = "MIT"
description = "A library that enables dynamically rebinding symbols in Mach-O binaries at runtime"
keywords = ["fishhook", "dylib", "macos", "mach-o", "binding"]
categories = ["os::macos-apis", "os"]
repository = "https://github.com/blkmlk/fishhook-rs"
readme = "README.md"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
elf = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = { version = "0.4.2", optional = true }
goblin = "0.10.0"
